Changes to try to fix modal issues on mobile devices

--- a/src/css/_global/_base.scss
+++ b/src/css/_global/_base.scss
@@ -2,6 +2,10 @@
 @import "colors";
 
 html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   font-family: "Montserrat", sans-serif;
   font-size: calc(1rem + 6 * ((100vw - 32rem) / 680));
   font-style: normal;
@@ -15,7 +19,8 @@ body, .body {
   flex-direction: column;
   justify-content: flex-start;
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
+//   min-height: 100vh;
   margin: 0 auto;
   padding: 0;
   animation: 0.5s ease-out 0s 1 fadeIn;
