--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,8 @@
 html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   font-family: "Montserrat", sans-serif;
   font-size: calc(1rem + 6 * ((100vw - 32rem) / 680));
   font-style: normal;
@@ -11,7 +15,7 @@ body, .body {
   flex-direction: column;
   justify-content: flex-start;
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
   margin: 0 auto;
   padding: 0;
   animation: 0.5s ease-out 0s 1 fadeIn; }
